# tet-ray-game-t

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.gui.yml  docker-compose.yml
.github/workflows/: ci.yml
app/game/: Game.cpp  constants.h
cmake/: ProjectOptions.cmake
docs/: architecture.md  assets-and-licenses.md  building.md  docker.md  quality.md  release.md  roadmap.md  testing.md  troubleshooting.md
docs/screenshots/: README.md
scripts/: check-core-boundary.sh  check-readme-links.ps1  check-readme-links.sh  package-release.ps1  package-release.sh  run-cppcheck.ps1  run-cppcheck.sh
src/app/: main.cpp
src/assets/: ResourcePaths.cpp  ResourcePaths.h
src/audio/: AudioService.cpp  AudioService.h
src/core/: Block.cpp  Block.h  Game.cpp  Game.h  GameStatus.h  Grid.cpp  Grid.h  LevelSystem.cpp  LevelSystem.h  Position.cpp  Position.h  RandomBag.cpp  RandomBag.h  ScoreSystem.cpp  ScoreSystem.h  TetrominoType.h  constants.h
src/input/: InputController.cpp  InputController.h
src/rendering/: Colors.cpp  Colors.h  RaylibRenderer.cpp  RaylibRenderer.h  RenderingConstants.h  UiLayout.h  UiTheme.h
tests/: BlockTests.cpp  GameTests.cpp  GridTests.cpp  LevelSystemTests.cpp  RandomBagTests.cpp  ResourcePathsTests.cpp  ScoreSystemTests.cpp  TetrominoTypeTests.cpp
